<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".perfil">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="413dp"
        android:layout_height="283dp"
        app:srcCompat="@drawable/fondogris"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulo_perfil"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="49dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#00000000"
        android:drawableLeft="@drawable/pen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        app:srcCompat="@drawable/me" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        android:text="@string/titular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <Button
        android:id="@+id/button7"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#05000000"
        android:drawableLeft="@drawable/user"
        android:drawableRight="@drawable/right"
        android:fontFamily="sans-serif-black"
        android:textSize="14dp"
        android:gravity="start|center_vertical"
        android:text="@string/informacion"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />/>

    <Button
        android:id="@+id/button8"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/tarjetas"
        android:textColor="@color/black"
        android:drawableRight="@drawable/right"
        android:backgroundTint="#05000000"
        android:fontFamily="sans-serif-black"
        android:textSize="14dp"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/card"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/opciones"
        android:textColor="@color/black"
        android:drawableRight="@drawable/right"
        android:backgroundTint="#05000000"
        android:fontFamily="sans-serif-black"
        android:textSize="14dp"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/gear"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/ayuda"
        android:textColor="@color/black"
        android:drawableRight="@drawable/right"
        android:backgroundTint="#05000000"
        android:fontFamily="sans-serif-black"
        android:textSize="14dp"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/help"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:iconGravity="textStart"
        app:iconPadding="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>